--- a/website/package.json
+++ b/website/package.json
@@ -5,7 +5,7 @@
     "clear": "node ./scripts/clear.js",
     "start": "docusaurus-start",
     "build": "docusaurus-build",
-    "publish-gh-pages": "GIT_USER=4wangyu CURRENT_BRANCH=master USE_SSH=true docusaurus-publish",
+    "publish-gh-pages": "GIT_USER=wangyu CURRENT_BRANCH=master USE_SSH=true docusaurus-publish",
     "write-translations": "docusaurus-write-translations",
     "version": "docusaurus-version",
     "rename-version": "docusaurus-rename-version"
